# trui

./: .editorconfig  .gitignore  Cargo.toml  NOTICE  rustfmt.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
examples/: animatables.rs  async_event_handler_stream.rs  async_task.rs  blocks.rs  button.rs  local_state.rs  rainbow_blocks.rs  rainbow_borders.rs  scroll_view.rs  wrapped_text.rs
examples/shared/: logging.rs
src/: app.rs  app_config.rs  geometry.rs  lib.rs  logging.rs  test_helper.rs  view.rs  widget.rs
src/view/: adapt.rs  animatable_value.rs  animatables.rs  block.rs  border.rs  common.rs  core.rs  defer.rs  events.rs  fill_max_size.rs  linear_layout.rs  margin.rs  one_of.rs  scroll_view.rs  text.rs  use_state.rs  weighted_linear_layout.rs
src/view/snapshots/: trui__view__block__tests__simple_block_test.snap  trui__view__block__tests__too_small_block.snap  trui__view__border__tests__simple_border_test.snap  trui__view__border__tests__too_small_viewport.snap
src/widget/: animatables.rs  block.rs  border.rs  box_constraints.rs  core.rs  events.rs  fill_max_size.rs  linear_layout.rs  margin.rs  scroll_view.rs  text.rs  weighted_linear_layout.rs
src/widget/snapshots/: trui__widget__block__tests__simple_text_test.snap  trui__widget__border__tests__simple_border_test.snap
