[package]
name = "trui"
version = "0.1.0"
edition = "2021"

[dependencies]
# xilem_core = { path = "../xilem/xilem/crates/xilem_core" }
xilem_core = { git = "https://github.com/Philipp-M/xilem.git", branch = "personal" }
crossterm = "0.27"
futures-task = "0.3"
futures-util = "0.3"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
kurbo = "0.10.4"
# update this when a new release occurs
ratatui = "0.26"
bitflags = "2.4.2"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.11"

[dev-dependencies]
futures = "0.3"
insta = "1.34.0"
rand = "0.8.5"

[lints.clippy]
dbg_macro = "warn"
