[package]
name = "trui"
version = "0.1.0"
edition = "2021"

[dependencies]
# xilem_core = { path = "../xilem/xilem/crates/xilem_core" }
xilem_core = { git = "https://github.com/Philipp-M/xilem.git", branch = "personal" }
anyhow = "1.0"
bitflags = "2.4"
crossterm = { version = "0.27", features = ["event-stream"] }
directories = "5.0"
futures = "0.3"
futures-task = "0.3"
futures-util = "0.3"
kurbo = "0.10"
ratatui = "0.26"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
unicode-segmentation = "1.11"
unicode-width = "0.1"

[dev-dependencies]
console-subscriber = "0.2.0"
insta = "1.34"
rand = "0.8"
tracing-subscriber = "0.3"

[lints.clippy]
dbg_macro = "warn"

[features]
# INTERNAL USE ONLY, workaround for https://github.com/rust-lang/rust/issues/67295
doctests = []
